bitfields/tests/compile_error_cases/errors/array_fields/array_field_array_backed_msb_overflow.stderr
error: The total bits of the fields (24 bits) exceeds the bit size of the bitfield type (16 bits).
 --> tests/compile_error_cases/errors/array_fields/array_field_array_backed_msb_overflow.rs:6:5
  |
6 |     b: u8,
  |     ^^^^^
